import { User } from "./User";

class Conversation {
  participants: User[];
}
